@@ -162,10 +162,16 @@ outnum(int n)
 void
 outasis(FILE * fp)
 {
+    /* we can't use `outch(c)' here, since we want to output the text
+     * really verbatim, with no line folding (if the user want to output
+     * raw fortran code, we expect him to know what he's doing, so we
+     * must be as unobtrusive as possible)
+     */
     char c;
+    outdon(); /* properly terminate the previous fortran output line */
     while ((c = ngetch(fp)) != NEWLINE)
-        outch(c);
-    outdon();
+        putchar(c);
+    putchar(NEWLINE);
 }
 
 /*
